# sensor-sphere

./: .gitignore  .pre-commit-config.yaml  README.md  requirements.txt  setup.cfg
config/: sensor_schema.yaml  sensor_schema_v2.yaml  sensor_schema_yamale.yaml
sensors/cameras/basler/: aca1300_200um.yaml  aca1920_150uc.yaml
sensors/cameras/ids/: ensenso_n35.yaml
sensors/cameras/intel/: realsense_d435i.yaml
sensors/cameras/mech_mind/: mech_eye_lsr_l.yaml  mech_eye_lsr_s.yaml  mech_eye_nano.yaml  mech_eye_nano_ultra.yaml  mech_eye_pro_m.yaml  mech_eye_pro_s.yaml  mech_eye_uhp_140.yaml
sensors/cameras/photoneo/: motioncam_3d_m_plus.yaml  motioncam_3d_s.yaml  phoxi_3d_scanner_m_gen3.yaml
sensors/cameras/roboception/: rc_visard_160_color.yaml  rc_visard_160_monochrome.yaml  rc_visard_160_monochrome_6mm.yaml  rc_visard_65_color.yaml  rc_visard_65_monochrome.yaml
sensors/cameras/stereolabs/: zed_2.yaml  zed_2i.yaml  zed_mini.yaml  zed_x.yaml
sensors/cameras/zivid/: one_plus_small.yaml  zivid_two_m70.yaml
sensors/imus/vectornav/: vn_100.yaml
sensors/lidars/hesai/: pandar_qt.yaml  pandar_xt16.yaml
sensors/lidars/ouster/: os0.yaml  os1.yaml  os2.yaml
sensors/lidars/sick/: lms_1000.yaml  lrs_4000.yaml
sensors/lidars/slamtec/: rplidar_a1.yaml  rplidar_a2.yaml  rplidar_s1.yaml
sensors/lidars/velodyne/: vlp16.yaml  vlp32c.yaml
sensors/radars/smartmicro/: drvegrd_152.yaml  drvegrd_166.yaml  drvegrd_169.yaml  drvegrd_171.yaml
src/sensor_tool/: __init__.py
src/sensor_tool/gui_qt/: __init__.py  main_window.py
src/sensor_tool/models/: __init__.py  repository.py  sensor_v2.py
(+29 files in other folders)
